src/test/ui/parser/trait-pub-assoc-ty.rs
trait Foo {
    pub type Foo;
    //~^ ERROR unnecessary visibility qualifier
}

fn main() {}
